@@ -104,6 +104,7 @@ foreach my $var ( qw(
    default_gmaps_search_zoom force_wgs84 google_analytics_key
    licence_name licence_url licence_info_url moderation_requires_password
    enable_node_image enable_common_categories enable_common_locales
+   spam_detector_module
   ) ) {
     my $q_method = $var . "__qu";
     my $qu  = $existing_config->$q_method;
@@ -369,6 +370,7 @@ $build->config_data( __templates     => [
                       "search_results.tt",
                       "site_index.tt",
                       "search.tt",
+                      "spam_detected.tt",
                       "userstats.tt",
                       "wanted_pages.tt"
     ] );
